# QEE

./: .gitignore  README.md
B23Downloader/: B23Downloader.cpp  B23Downloader.h  B23Downloader.qrc  B23Downloader.ui  main.cpp
QEEMain/: AudioIdentifyWidget.cpp  AudioIdentifyWidget.h  AudioIdentifyWidget.ui  AudioRecord.cpp  AudioRecord.h  CMakeLists.txt  MatOperator.cpp  MatOperator.h  QEEMain.cpp  QEEMain.h  QEEMain.pri  QEEMain.pro  QEEMain.qrc  QEEMain.sln  QEEMain.ui  Settings.cpp  Settings.h  Utils.cpp  Utils.h  audiodialog.cpp  audiodialog.h  audiodialog.ui  audiosource.cpp  audiosource.h  b23mw.cpp  b23mw.h  b23mw.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qeemain_zh.qm  qeemain_zh.ts  test.pcm  utils.cpp  utils.h
QEEMain/Include/: CameraApi.h  CameraGrabber.h  CameraImage.h
QEEMain/cv/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  camera.cpp  camera.h  cvaction.cpp  cvaction.h  cvmainwindow.cpp  cvmainwindow.h  cvmainwindow.ui  mindvisioncamera.cpp  mindvisioncamera.h
QEEMain/qeecv/: AOI.cpp  AOI.h  BlurWidget.cpp  BlurWidget.h  BlurWidget.ui  BlurWidget.ui.autosave  CVAction.cpp  CVAction.h  VoiceOrder.cpp  VoiceOrder.h  camera.cpp  camera.h  cvmainwindow.cpp  cvmainwindow.h  cvmainwindow.ui  settingsdialog.cpp  settingsdialog.h
data/images/: acmilan.xml  hourse.xml
